[gd_scene load_steps=18 format=3 uid="uid://dtcknsjsvxg38"]

[ext_resource type="Theme" uid="uid://cvtgnhbl452vj" path="res://Assets/Inventory/Inventory_theme.tres" id="1_gewfw"]
[ext_resource type="Script" uid="uid://jeps2byaualt" path="res://Assets/Inventory/Inventory.gd" id="2_3naci"]
[ext_resource type="Shader" uid="uid://cv75wolnqf00h" path="res://Assets/Inventory/Inventory_background.gdshader" id="3_qcbob"]
[ext_resource type="PackedScene" uid="uid://nxxw5gbtnejd" path="res://Assets/Inventory/MeshView2d.tscn" id="4_uebq1"]
[ext_resource type="PackedScene" uid="uid://cwrhekn37toy4" path="res://Assets/Inventory/item_choose_window.tscn" id="5_bckn1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_744bd"]
shader = ExtResource("3_qcbob")
shader_parameter/translucent = 0.0

[sub_resource type="Gradient" id="Gradient_bk0mu"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.8)
colors = PackedColorArray(0, 0, 0, 1, 0, 0.74902, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_hcb5a"]
gradient = SubResource("Gradient_bk0mu")
width = 100
height = 100
fill = 2

[sub_resource type="InputEventAction" id="InputEventAction_pcxar"]
action = &"pause"

[sub_resource type="Shortcut" id="Shortcut_be5wd"]
events = [SubResource("InputEventAction_pcxar")]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ln0lj"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.121569, 0.121569, 0.121569, 0.498039)
border_width_left = 5
border_width_top = 10
border_width_right = 5
border_width_bottom = 30
border_color = Color(0.498039, 0.498039, 0.498039, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 5
shadow_color = Color(0, 0, 0, 0.247059)
shadow_size = 2
shadow_offset = Vector2(0, 5)

[sub_resource type="Animation" id="Animation_pgdh6"]
resource_name = "Equipment"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Main:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [0.0, -1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Main:anchor_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EquipmentInv:anchor_left")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [1.025, 0.025]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("EquipmentInv:anchor_right")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [1.975, 0.975]
}

[sub_resource type="Animation" id="Animation_ok5pw"]
resource_name = "Item"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Main:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [0.0, -1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Main:anchor_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ItemInv:anchor_left")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [1.025, 0.025]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ItemInv:anchor_right")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [1.975, 0.975]
}

[sub_resource type="Animation" id="Animation_if8jo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel_u:offset_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-100.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel_u:offset_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel_d:offset_bottom")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [20.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Panel_d:offset_top")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Background:material:shader_parameter/translucent")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Main:anchor_left")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Main:anchor_right")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("ItemInv:anchor_left")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("ItemInv:anchor_right")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("BackButton:offset_bottom")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [50.0]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("BackButton:offset_top")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("EquipmentInv:anchor_left")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.025]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("EquipmentInv:anchor_right")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.975]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Hotbar:anchor_top")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("Hotbar:anchor_bottom")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}

[sub_resource type="Animation" id="Animation_c23fc"]
resource_name = "Show"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel_u:offset_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(-3, 1),
"update": 0,
"values": [-80.0, -10.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel_u:offset_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(-3, 1),
"update": 0,
"values": [0.0, 100.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel_d:offset_bottom")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(-3, 1),
"update": 0,
"values": [20.0, 10.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Panel_d:offset_top")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(-3, 1),
"update": 0,
"values": [0.0, -100.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Background:material:shader_parameter/translucent")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.75]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.01),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Main:anchor_left")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [-1.0, 0.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Main:anchor_right")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("BackButton:offset_bottom")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [50.0, -25.0]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("BackButton:offset_top")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [0.0, -75.0]
}

[sub_resource type="Animation" id="Animation_cajuj"]
resource_name = "Status"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hotbar:anchor_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [2.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hotbar:anchor_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [2.0, 1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Main:anchor_left")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [0.0, -1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Main:anchor_right")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q4uqo"]
_data = {
&"Equipment": SubResource("Animation_pgdh6"),
&"Item": SubResource("Animation_ok5pw"),
&"RESET": SubResource("Animation_if8jo"),
&"Show": SubResource("Animation_c23fc"),
&"Status": SubResource("Animation_cajuj")
}

[node name="Inventory" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_gewfw")
script = ExtResource("2_3naci")

[node name="Background" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_744bd")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_hcb5a")
stretch_mode = 1

[node name="Main" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -1.0
anchor_bottom = 1.0
offset_left = 45.0
offset_top = 150.0
offset_right = -45.0
offset_bottom = -150.0
grow_vertical = 2

[node name="Scroll" type="ScrollContainer" parent="Main"]
clip_contents = false
custom_minimum_size = Vector2(420, 0)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="ButtonGroup" type="VBoxContainer" parent="Main/Scroll"]
layout_mode = 2

[node name="HBox0" type="HBoxContainer" parent="Main/Scroll/ButtonGroup"]
layout_mode = 2

[node name="ItemButton" type="Button" parent="Main/Scroll/ButtonGroup/HBox0"]
custom_minimum_size = Vector2(150, 100)
layout_mode = 2
text = "inventory.item"
alignment = 0
clip_text = true

[node name="EquipmentButton" type="Button" parent="Main/Scroll/ButtonGroup/HBox0"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
text = "inventory.equipment"
alignment = 0
clip_text = true

[node name="HBox1" type="HBoxContainer" parent="Main/Scroll/ButtonGroup"]
layout_mode = 2

[node name="SpecialButton" type="Button" parent="Main/Scroll/ButtonGroup/HBox1"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
text = "inventory.special"
alignment = 0
clip_text = true

[node name="CollectionButton" type="Button" parent="Main/Scroll/ButtonGroup/HBox1"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "inventory.collection"
alignment = 0
clip_text = true

[node name="HSeparator0" type="HSeparator" parent="Main/Scroll/ButtonGroup"]
custom_minimum_size = Vector2(405, 10)
layout_mode = 2
size_flags_horizontal = 0

[node name="StatusButton" type="Button" parent="Main/Scroll/ButtonGroup"]
custom_minimum_size = Vector2(405, 45)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_gewfw")
theme_type_variation = &"BlueButton"
text = "inventory.status.t"
alignment = 0

[node name="Panel_u" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_top = -100.0
grow_horizontal = 2
grow_vertical = 0

[node name="Title" type="Label" parent="Panel_u"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 35
text = "inventory.title"

[node name="Panel_d" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="BackButton" type="Button" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_right = 8.0
offset_bottom = 50.0
grow_vertical = 0
shortcut = SubResource("Shortcut_be5wd")
text = "button.back"

[node name="ItemInv" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 2.0
anchor_bottom = 1.0
offset_top = 125.0
offset_bottom = -125.0
grow_horizontal = 2
grow_vertical = 2

[node name="ItemList" type="Tree" parent="ItemInv"]
layout_mode = 2
size_flags_horizontal = 3
columns = 2
column_titles_visible = true
hide_root = true
select_mode = 1

[node name="Preview" type="VBoxContainer" parent="ItemInv"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Name" type="Label" parent="ItemInv/Preview"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 35
text = "test"

[node name="View" type="SubViewportContainer" parent="ItemInv/Preview"]
layout_mode = 2
size_flags_vertical = 3
stretch = true

[node name="Viewport" type="SubViewport" parent="ItemInv/Preview/View"]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(2, 2)
render_target_update_mode = 0

[node name="MeshView2d" parent="ItemInv/Preview/View/Viewport" instance=ExtResource("4_uebq1")]

[node name="Description" type="RichTextLabel" parent="ItemInv/Preview"]
layout_mode = 2
size_flags_vertical = 3

[node name="EquipmentInv" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.025
anchor_right = 1.975
anchor_bottom = 1.0
offset_top = 125.0
offset_bottom = -125.0
grow_horizontal = 2
grow_vertical = 2

[node name="EquipmentList" type="Tree" parent="EquipmentInv"]
layout_mode = 2
size_flags_horizontal = 3
columns = 2
column_titles_visible = true
hide_root = true
select_mode = 1

[node name="Preview" type="VBoxContainer" parent="EquipmentInv"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Container" type="Control" parent="EquipmentInv/Preview"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="EquipmentInv/Preview/Container"]
z_index = 1
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 103.0
grow_horizontal = 2
theme_override_constants/separation = 0

[node name="Name" type="Label" parent="EquipmentInv/Preview/Container/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 50
text = "test"

[node name="Subname" type="Label" parent="EquipmentInv/Preview/Container/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 30
text = "Sub"

[node name="Info" type="Label" parent="EquipmentInv/Preview/Container/VBoxContainer"]
layout_mode = 2
text = "Info
Info2"

[node name="View" type="SubViewportContainer" parent="EquipmentInv/Preview"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.5
stretch = true

[node name="Viewport" type="SubViewport" parent="EquipmentInv/Preview/View"]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(2, 2)
render_target_update_mode = 0

[node name="MeshView2d" parent="EquipmentInv/Preview/View/Viewport" instance=ExtResource("4_uebq1")]

[node name="Description" type="RichTextLabel" parent="EquipmentInv/Preview"]
layout_mode = 2
size_flags_vertical = 3

[node name="Hotbar" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 2.0
anchor_bottom = 2.0
offset_left = 45.0
offset_top = -345.0
offset_right = 419.0
offset_bottom = -125.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ln0lj")

[node name="VBox" type="VBoxContainer" parent="Hotbar"]
layout_mode = 2

[node name="ToolHotBarTitle" type="Label" parent="Hotbar/VBox"]
layout_mode = 2
text = "inventory.equipment.tool"

[node name="ToolHBox" type="HBoxContainer" parent="Hotbar/VBox"]
layout_mode = 2

[node name="ToolHotbar0" type="Button" parent="Hotbar/VBox/ToolHBox"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
icon_alignment = 1
expand_icon = true

[node name="ToolHotbar1" type="Button" parent="Hotbar/VBox/ToolHBox"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
icon_alignment = 1
expand_icon = true

[node name="ToolHotbar2" type="Button" parent="Hotbar/VBox/ToolHBox"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
icon_alignment = 1
expand_icon = true

[node name="ToolHotbar3" type="Button" parent="Hotbar/VBox/ToolHBox"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
icon_alignment = 1
expand_icon = true

[node name="ToolHotbar4" type="Button" parent="Hotbar/VBox/ToolHBox"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
icon_alignment = 1
expand_icon = true

[node name="ItemHotBarTitle" type="Label" parent="Hotbar/VBox"]
layout_mode = 2
text = "inventory.item.item"

[node name="ItemHBox" type="HBoxContainer" parent="Hotbar/VBox"]
layout_mode = 2

[node name="ItemHotbar0" type="Button" parent="Hotbar/VBox/ItemHBox"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
icon_alignment = 1
expand_icon = true

[node name="ItemHotbar1" type="Button" parent="Hotbar/VBox/ItemHBox"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
icon_alignment = 1
expand_icon = true

[node name="ItemHotbar2" type="Button" parent="Hotbar/VBox/ItemHBox"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
icon_alignment = 1
expand_icon = true

[node name="ItemHotbar3" type="Button" parent="Hotbar/VBox/ItemHBox"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
icon_alignment = 1
expand_icon = true

[node name="ItemHotbar4" type="Button" parent="Hotbar/VBox/ItemHBox"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
icon_alignment = 1
expand_icon = true

[node name="ItemChooseWindow" parent="Hotbar" instance=ExtResource("5_bckn1")]
transparent_bg = true
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_q4uqo")
}

[connection signal="pressed" from="Main/Scroll/ButtonGroup/HBox0/ItemButton" to="." method="_on_item_button_pressed"]
[connection signal="pressed" from="Main/Scroll/ButtonGroup/HBox0/EquipmentButton" to="." method="_on_equipment_button_pressed"]
[connection signal="pressed" from="Main/Scroll/ButtonGroup/StatusButton" to="." method="_on_status_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="column_title_clicked" from="ItemInv/ItemList" to="." method="_on_item_list_column_title_clicked"]
[connection signal="item_selected" from="ItemInv/ItemList" to="." method="_on_item_list_item_selected"]
[connection signal="column_title_clicked" from="EquipmentInv/EquipmentList" to="." method="_on_equipment_list_column_title_clicked"]
[connection signal="item_selected" from="EquipmentInv/EquipmentList" to="." method="_on_equipment_list_item_selected"]
[connection signal="on_item_select" from="Hotbar/ItemChooseWindow" to="." method="_on_item_choose_window_on_item_select"]
